# crypto-projects

./: .gitignore  some-refs.txt
project/zk_stark_demo/: GUI_WALKTHROUGH.md  README.md  README_SECURITY.md  flask_run.sh  main.py  pyproject.toml  vite_run.sh
project/zk_stark_demo/scripts/: proof.json  proof_runner.sh  verifier_runner.sh
project/zk_stark_demo/src/zk_stark_demo/air_examples/: cubic.py  rollup.py
project/zk_stark_demo/src/zk_stark_demo/algebra/: fft.py  field.py  merkle.py  polynomial.py  smaller_field.py
project/zk_stark_demo/src/zk_stark_demo/cli/: __init__.py  base.py  fibonacci_prover_cli.py  prover_cli.py  verifier_cli.py
project/zk_stark_demo/src/zk_stark_demo/cli/cubic/: demo_cubic.py  prover_cli.py  run_prover.sh  verifier_cli.py
project/zk_stark_demo/src/zk_stark_demo/cli/fibonacci/: proof.json  proof_runner.sh  prover_cli.py  verifier_cli.py  verifier_runner.sh
project/zk_stark_demo/src/zk_stark_demo/examples/: __init__.py  cubic.py  demo_cubic.py  fibonacci.py
project/zk_stark_demo/src/zk_stark_demo/gui/: __init__.py  discovery.py  server.py
project/zk_stark_demo/src/zk_stark_demo/stark/: air.py  channel.py  fri.py  fri_verifier.py  lde.py  prover.py  trace.py  verifier.py
project/zk_stark_demo/src/zk_stark_demo/utils/: serialization.py
project/zk_stark_demo/tests/: test_algebra.py  test_cubic.py  test_fri.py  test_full_flow.py  test_generator_visual.py  test_stark_mechanics.py
project/zk_stark_demo/web_app/: index.html  package-lock.json  package.json
project/zk_stark_demo/web_app/src/: App.jsx  index.css
(+5 files in other folders)
