[project]
name = "zk-stark-demo"
version = "0.1.0"
description = "Poriectu de la crypto cu zero knowledge STARKs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]
